--- a/styling.css
+++ b/styling.css
@@ -289,8 +289,8 @@ body {
 @media (min-width: 901px) and (max-width: 1800px) {
     body {
         font-size: 17px;
-        margin-left: 200px;
-        margin-right: 200px;
+        margin-left: auto;
+        margin-right: auto;
         margin-top: 30px;
         margin-bottom: 25px;
         max-width: 800px
@@ -306,8 +306,8 @@ body {
 @media (min-width: 1801px) {
     body {
         font-size: 18px;
-        margin-left: 20%;
-        margin-right: 20%;
+        margin-left: auto;
+        margin-right: auto;
         margin-top: 30px;
         margin-bottom: 25px;
         max-width: 1000px
@@ -323,12 +323,13 @@ body {
 @media print {
     body {
         font-size: 16px;
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-top: 10px;
-        margin-bottom: 15px
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-top: 0px;
+        margin-bottom: 0px
     }
-    .noprint {
+    .noprint,
+    .footer {
         display: none;
     }
     .sidebyside {
@@ -663,4 +664,28 @@ figcaption {
 
 #title-block-header {
     display: none;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 45px;
+    text-align: center;
+    background-color: #f0f0f0;
+}
+
+.top_header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 45px;
+    text-align: center;
+    background-color: #f0f0f0;
+}
+
+.directions {
+    margin-right:10px;
 }
